<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:alphabeticShortcut="h"
        android:showAsAction="always"
        android:icon="@drawable/home"/>

    <item
        android:title="@string/settings"
        android:id="@+id/settings"
        android:alphabeticShortcut="c"
        android:showAsAction="ifRoom"
        android:icon="@drawable/settings"/>
    
    <item
        android:title="@string/search"
        android:id="@+id/search"
        android:alphabeticShortcut="s"
        android:showAsAction="always"
        android:icon="@drawable/search"/>

    
    <item
    android:title="@string/about"
    android:id="@+id/about"
    android:alphabeticShortcut="a"/>

    <item
        android:title="@string/help"
        android:id="@+id/help"
        android:alphabeticShortcut="h"/>

</menu>