<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/list_title" />

    <EditText
        android:id="@+id/songNo_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:inputType="number"
        android:hint="@string/enter_song_number"
        android:layout_below="@id/list_title"
        android:ems="10">
        <requestFocus />
    </EditText>

    <ListView
        android:id="@id/android:list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songNo_editText"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/songNo_editText"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/no_data" />

</RelativeLayout>